--- a/css/onepage.css
+++ b/css/onepage.css
@@ -173,13 +173,13 @@ section {
 
 .navbar-default .navbar-brand {
     font-family: 'Montserrat', sans-serif;
-    color: #212a3f;
+    color: #fff;
     font-weight: 700;
 	font-size: 1em;
 	height: auto;
 	line-height: 25px;
 	letter-spacing: 1px;
-	border: 3px solid #212a3f;
+	border: 3px solid #fff;
 	padding: 3px 8px;
 	margin: 7px 0 0 10px;
 }
@@ -188,7 +188,8 @@ section {
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #FFF;
+    color: #e07400;
+    border-color: #e07400;
 }
 
 .navbar-default .navbar-collapse {
@@ -221,7 +222,7 @@ section {
 
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
-    color: #e07400;
+    color: #fff;
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -282,7 +283,7 @@ section {
     }
 
     .navbar-default .nav li a{
-	    color: #212a3f;
+	    color: #8ab839;
 	}
 
 	.navbar-shrink .navbar-brand{
@@ -303,7 +304,7 @@ header {
     color: #fff;
     background-color: #2e2e2e;
     background-repeat: no-repeat;
-    background-position: right center;
+    background-position: left center;
 }
 
 header .intro-text {
@@ -343,9 +344,9 @@ header .text-wraper{
 
 .about-focus{
 	font-weight: bold;
-	color: #A0D36E;
+	color: #e07400;
 	font-style: italic;
-	text-shadow: 1px 1px 1px #666;
+	text-shadow: 1px 1px 1px #000;
 }
 
 @media(min-width:768px) and (max-width: 991px){
@@ -398,7 +399,7 @@ header .text-wraper{
 @media(min-width:992px){	
 
 	header{
-		background-position: right top;
+		background-position: left -100px;
 	}
 }
 
@@ -605,7 +606,7 @@ div.about-header{
 	padding-left: 1.5em;
 }
 
-#skill-bar h3:before{
+/*#skill-bar h3:before{
 	content: "\f04c";
     font-family: FontAwesome;
     font-size: 1em;
@@ -620,7 +621,7 @@ div.about-header{
 	-ms-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 	transform: rotate(90deg); 
-}
+}*/
 
 @media(min-width:480px){
 
