--- a/css/onepage.css
+++ b/css/onepage.css
@@ -346,7 +346,7 @@ header .text-wraper{
 	font-weight: bold;
 	color: #e07400;
 	font-style: italic;
-	text-shadow: 1px 1px 1px #000;
+	/*text-shadow: 1px 1px 1px #000;*/
 }
 
 @media(min-width:768px) and (max-width: 991px){
