--- a/css/onepage.css
+++ b/css/onepage.css
@@ -73,19 +73,19 @@ h2{
 h3{
 	font-size: 1em;
 	color: #2e2e2e;
-	font-weight: 300;
+	font-weight: 400;
 	line-height: 1.3;
 }
 
 h4{
 	font-size: 0.85em;
-	font-weight: 300;
+	font-weight: 400;
 	line-height: 1.5;
 }
 
 h5{
 	font-size: 0.85em;
-	font-weight: 300;
+	font-weight: 400;
 	color: #aaa;
 }
 
@@ -113,6 +113,10 @@ section {
 .span-focus{
 	font-weight: bold;
 	margin-right: 0.25em;
+	color:#e07400;
+}
+
+.span-color{
 	color:#e07400;
 }
 
