--- a/css/onepage.css
+++ b/css/onepage.css
@@ -48,7 +48,7 @@ abbr,acronym { border: 0;
 body{
 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
 	color: #2e2e2e;
-	font-size: 15px;
+	font-size: 18px;
 }
 
 h1{
@@ -56,12 +56,12 @@ h1{
 	display: inline-block;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 2.5em;
-	font-weight: 400;
+	font-weight: bold;
 	color: #8ab839;
 	text-transform: uppercase;
 	margin-top: 0.5em;
 	padding: 10px 15px;
-	border: #8ab839 solid 1px;	
+	border: #8ab839 solid 3px;	
 }
 
 h2{
@@ -162,6 +162,18 @@ section {
 
     .row{
 		padding: 20px 4.5%;
+	}
+}
+
+@media(min-width: 1600px){
+
+	body{
+		font-size: 18px;
+	}
+
+	.container{
+		width: 80%;
+		max-width: 2000px;
 	}
 }
 
@@ -353,16 +365,6 @@ header .text-wraper{
 	/*text-shadow: 1px 1px 1px #000;*/
 }
 
-@media(min-width:768px) and (max-width: 991px){
-
-	header .container{
-		width: 100%;
-	}
-
-	header{
-		background-position: 30% top;
-	}
-}
 
 @media(min-width:768px) {
 
@@ -400,10 +402,14 @@ header .text-wraper{
 
 }
 
-@media(min-width:992px){	
+@media(min-width:768px) and (max-width: 991px){
+
+	header .container{
+		width: 100%;
+	}
 
 	header{
-		background-position: left -100px;
+		background-position: 30% top;
 	}
 }
 
@@ -419,6 +425,30 @@ header .text-wraper{
     	margin-top: 1em;
     }
 }
+
+@media(min-width:992px){	
+
+	header{
+		background-position: left -100px;
+	}
+}
+
+@media(min-width:1600px){	
+
+	#myHeader{
+		height: 800px;
+	}
+
+	header .intro-text {
+        padding-top: 200px;
+    }
+
+    header .text-wraper{
+		margin-left: 40%;		
+	}
+}
+
+
 
 /*-------------------------------------------------------
 
@@ -538,6 +568,7 @@ div.about-header{
 
 @media(min-width:992px){
 
+
 	div.about-header{
 		padding-top: 20px;
 	}
@@ -551,6 +582,15 @@ div.about-header{
 		vertical-align: middle;
 		float: none;
 	}
+}
+
+@media(min-width:1600px){
+
+	#profile-wraper{
+		width: 270px;
+		height: 270px;
+	}
+
 }
 
 
@@ -685,16 +725,33 @@ div.about-header{
 		padding: 0 10%;
 	}
 
+	.my-skill{
+		padding: 80px 0 60px 0;
+	}
+
 	#skill-bar h2{
 		font-size: 1.75em;
 	}
 
 	#skill-bar h3{
+		margin: 1.5em 0;
 		font-size: 1.75em;
 	}
 
 	#skill-bar ul i{
 		font-size: 3em;
+	}
+}
+
+@media(min-width:1600px){
+
+	#skill-bar li img{
+		width: 80%;
+		height: auto;
+	}
+
+	#skill-bar h3{
+		font-size: 2em;
 	}
 }
 
